# switch_linux_launcher

./: .gitignore  .gitmodules  README.md
app/: .gitignore  build.gradle
app/src/androidTest/java/io/mrarm/switchlinuxlauncher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/mrarm/switchlinuxlauncher/: BinaryReader.java  BinaryWriter.java  DeviceType.java  FilePaths.java  HexString.java  ImxUsbLoader.java  MainActivity.java  ShofEL2.java  UsbDeviceActivity.java
app/src/main/java/io/mrarm/switchlinuxlauncher/log/: LogCatLogger.java  LogOutput.java  LogProxy.java  Logger.java
app/src/main/java/io/mrarm/switchlinuxlauncher/log/ui/: LogAdapter.java  LogView.java
app/src/main/java/io/mrarm/switchlinuxlauncher/util/: BinaryReader.java  BinaryWriter.java  HexString.java
app/src/main/jni/: CMakeLists.txt  HexString.cpp  HexString.h  ImxUsbLoader.cpp  JLogProxy.cpp  JLogProxy.h  ShofEL2.cpp
app/src/main/jni/imx_usb_loader_helper/: imx_log_helper.cpp  imx_log_helper.h
app/src/main/res/layout/: activity_main.xml  activity_usb_device.xml  entry_log.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/io/mrarm/switchlinuxlauncher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
